--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Sticky Add to Cart for Shopify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <style>
+      body { font-family: sans-serif; max-width: 600px; margin: 2rem auto; }
+      h1 { color: #008060; }
+      .cta { background: #008060; color: #fff; padding: 1em; border-radius: 5px; text-align: center; }
+      .screenshots img { max-width: 100%; border: 1px solid #eee; margin: 1em 0; }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <h1>Sticky Add to Cart for Shopify</h1>
+    <p>Boost conversions by keeping the add to cart button visible as customers scroll your store.</p>
+    <div class="screenshots">
+      <img src="screenshot.png" alt="Sticky Add to Cart Demo" />
+    </div>
+    <div class="cta">
+      <a href="#" style="color: #fff; text-decoration: none;">Install on Shopify</a>
+    </div>
+    <h2>Features</h2>
+    <ul>
+      <li>Sticky add to cart bar on product pages</li>
+      <li>Easy to install, no code required</li>
+      <li>Customizable colors and text</li>
+    </ul>
+    <h2>Support</h2>
+    <p>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+    <h2>Privacy Policy</h2>
+    <p>Your privacy policy goes here.</p>
   </body>
 </html>
